--- a/main.ipynb
+++ b/main.ipynb
@@ -215,7 +215,7 @@
       },
       "outputs": [],
       "source": [
-        "def get_conditional_prob(word_counts: int, word: str, total_words_in_list: int, unique_word_count: int) -> int:\n",
+        "def get_conditional_prob(word_counts: int, word: str, total_words_in_list: int, unique_word_count: int) -> float:\n",
         "\n",
         "    prob = 1\n",
         "    if word in word_counts:\n",
